--- a/maquetado/css/styles.css
+++ b/maquetado/css/styles.css
@@ -17,7 +17,6 @@
 }
 
 .separator {
-  border: 0;
   margin-right: 40px;
   width: 5px;
   background: -webkit-linear-gradient(to bottom, transparent, #F5C85F, transparent);
@@ -33,4 +32,36 @@
   .separator {
     display: none;
   }
+}
+
+.features {
+  display: flex;
+  margin-top: 100px;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
+
+.feature {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+b {
+  font-family: 'Open Sans', sans-serif;
+}
+
+.bold {
+  margin-top: 20px;
+  color: #111;
+  font-size: 16px;
+  text-align: center;
+
+}
+
+.description {
+  color: #999;
+  margin-top: 20px;
+  font-size: 14px;
+  text-align: center;
 }
