--- a/maquetado/css/styles.css
+++ b/maquetado/css/styles.css
@@ -16,7 +16,6 @@
 }
 
 .separator {
-  border: 0;
   width: 5px;
   background: -webkit-linear-gradient(to bottom, #00000000, #F5C85F, #00000000);
   background: linear-gradient(to bottom, #00000000, #F5C85F, #00000000)
@@ -28,9 +27,38 @@
 }
 
 .top-bar {
-  border: 0;
   height: 5px;
   background: #F5C85F;
+}
+
+.features {
+  display: flex;
+  flex-flow: row wrap;
+  margin: 100px 0 0 0;
+  justify-content: space-around;
+  word-wrap: break-word;
+}
+
+.feature {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+p {
+  font-family: Open Sans;
+  flex-wrap: wrap;
+}
+
+.bold {
+  margin: 20px 0 0 0;
+  color: #111;
+}
+
+.description {
+  margin: 20px 0 0 0;
+  color: #999;
 }
 
 @media (max-width: 1200px) {
