--- a/maquetado/css/styles.css
+++ b/maquetado/css/styles.css
@@ -54,11 +54,15 @@ p {
 .bold {
   margin: 20px 0 0 0;
   color: #111;
+  font-size: 16px;
+  text-align: center;
 }
 
 .description {
   margin: 20px 0 0 0;
   color: #999;
+  font-size: 14px;
+  text-align: center;
 }
 
 @media (max-width: 1200px) {
