--- a/maquetado/css/styles.css
+++ b/maquetado/css/styles.css
@@ -1,3 +1,7 @@
+* {
+  font-family: 'Open Sans', sans-serif;
+}
+
 .container {
   display: flex;
   flex-flow: column wrap;
@@ -17,7 +21,6 @@
 }
 
 .separator {
-  border: 0;
   margin-right: 40px;
   width: 5px;
   background: -webkit-linear-gradient(to bottom, transparent, #F5C85F, transparent);
@@ -33,4 +36,47 @@
   .separator {
     display: none;
   }
+}
+
+.features {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  background-color: #EEE;
+  position: relative;
+  padding: 20px;
+}
+
+.features::before {
+  content: '';
+  background-image: url("../images/triangle.png");
+  width: 100%;
+  height: 12px;
+  position: absolute;
+  top: -12px;
+  left: 0;
+}
+.feature {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.feature-image {
+  margin-bottom: 20px;
+}
+
+.title {
+  margin-bottom: 20px;
+  color: #111;
+  font-size: 16px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.description {
+  color: #999;
+  font-size: 14px;
+  text-align: center;
+  font-weight: bold;
 }
