changed to redux form

--- a/wbooks/src/Screens/App/Screens/Dashboard/styles.css
+++ b/wbooks/src/Screens/App/Screens/Dashboard/styles.css
@@ -1,4 +1,4 @@
-.Nav {
+.nav {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -29,6 +29,14 @@
   background-color:#f4f4f4;
   width:196px;
   height:38px;
+}
+
+.search-button {
+  border: 0;
+  padding: 0;
+  height: 38px;
+  width: 38px;
+  background-color: #a5cd39;
 }
 
 .search-icon {
